# Stash-AIServer

./: .gitignore  Dockerfile.reencode  LOGGING_SUMMARY.md  README.md  RECOMMENDATIONS_DESIGN.md  TESTING_PLAN_TAG_EXCLUSION.md  docker-compose.yml
.github/: CODEOWNERS  (+1 more)
backend/: Dockerfile  MANIFEST.in  README.md  TEST_SUITE_ANALYSIS_REPORT.md  TEST_SUITE_COMPLETION_SUMMARY.md  TROUBLESHOOT_TEST_VIEWER.md  analyze_tests.py  config.docker.sample.env  config.sample.env  environment.yml  pyproject.toml  pytest-fast.ini  pytest.ini  requirements.txt  run_infrastructure_tests.py  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_task_history.py  0003_interactions.py  0004_session_aliases.py  0005_scene_watch_pointer.py  0006_session_finalization.py
backend/app/: __init__.py  dev_entrypoint.py  entrypoint.py  main.py
backend/app/actions/: models.py  registry.py
backend/app/api/: actions.py  interactions.py  plugins.py  recommendations.py  requests.py  tasks.py  version.py  ws.py
backend/app/core/: config.py  migrations.py  system_settings.py
backend/app/db/: session.py
backend/app/models/: ai_request.py  interaction.py  plugin.py
backend/app/plugin_runtime/: loader.py  settings_registry.py
backend/app/plugins/: loader.py  settings_registry.py
backend/app/recommendations/: __init__.py  models.py  registry.py
backend/app/schemas/: ai_request.py  interaction.py
backend/app/services/: interactions.py  registry.py
backend/app/tasks/: history.py  manager.py  models.py
backend/app/utils/: stash.py
backend/data/: app.db
backend/plugins/baseline_popularity_plugin/: plugin.yml  recommender.py
backend/plugins/performer_tag_hybrid_plugin/: plugin.yml  recommender.py
backend/plugins/personalized_tfidf_plugin/: plugin.yml  recommender.py
backend/plugins/segment_similarity_plugin/: plugin.yml  recommender.py
backend/plugins/skier_aitagging_plugin/: api_models.py  http_handler.py  logic.py  marker_handling.py  models.py  plugin.yml  reprocessing.py  scene_tagging.py  service.py  stash_handler.py  tag_config.py  tag_settings.template.csv  utils.py
backend/plugins/timespan_filter_plugin/: plugin.yml  recommender.py
backend/stash_ai_server/: __init__.py  alembic.ini  dev_entrypoint.py  entrypoint.py  main.py
backend/stash_ai_server/actions/: models.py  registry.py
backend/stash_ai_server/alembic/: env.py
backend/stash_ai_server/api/: actions.py  interactions.py  plugins.py  recommendations.py  system.py  tasks.py  version.py  ws.py
backend/stash_ai_server/core/: api_key.py  compat.py  config.py  dependencies.py  logging_config.py  migrations.py  runtime.py  system_settings.py
backend/stash_ai_server/db/: ai_results_store.py  session.py  sqlite_fdw.py  sqlite_migrator.py
backend/stash_ai_server/models/: __init__.py  ai_results.py  interaction.py  plugin.py  recommendation.py
backend/stash_ai_server/plugin_runtime/: __init__.py  loader.py  settings_registry.py
backend/tests/: DATABASE_TESTING.md  IDE_SETUP.md  MIGRATION_TESTING_STATUS.md  README.md  archived_test_context_rules.py  archived_test_infrastructure.py  archived_test_task_manager_concurrency_internal.py  archived_test_url_helpers.py  archived_test_websocket_lifecycle.py  async_utils.py  ci_setup_example.yml  config.py  conftest.py  database.py  migration_testing.py  test_api_endpoints.py  test_api_simple.py  test_api_websockets.py  test_async_utils.py  test_basic_infrastructure.py  test_batch_group_cancel.py  test_database_availability.py  test_database_resilience.py  test_edge_cases.py  test_image_tag_records.py  test_migrations.py  test_plugin_catalog_integration.py  test_plugin_directory_structure.py  test_plugin_system_comprehensive.py  test_priority_concurrency_cancel.py  test_scene_watch_segments.py  test_simple_example.py  test_simple_startup.py  test_task_manager_comprehensive.py  test_task_manager_utils.py  test_utils_path_mutation.py  test_utils_stash_db.py  test_utils_string.py  test_utils_url.py  validate_database_infrastructure.py
(+149 files in other folders)
