[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stash-ai-server"
version = "0.1.0"
description = "Stash AI Overhaul Backend Server"
authors = [ { name = "Stash AI Overhaul" } ]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.0",
  "SQLAlchemy==2.0.32",
  "alembic==1.13.2",
  "pydantic==2.9.2",
  "python-dotenv==1.0.1",
  "httpx==0.27.2",
  "stashapp-tools==0.2.58",
  "PyYAML==6.0.2",
  "packaging==24.1"
]

[project.urls]
Homepage = "https://github.com/skier233/Stash-AIServer"

[project.scripts]
stash-ai-server = "app.entrypoint:main"
