[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stash-ai-server"
version = "0.0.0+local"
# Note: The release workflow overwrites this value with the Git tag-derived
# version before building the wheel. This default keeps local development and
# local builds working when CI is not running.
description = "Stash AI Overhaul Backend Server"
authors = [ { name = "Stash AI Overhaul" } ]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "fastapi==0.123.8",
  "uvicorn[standard]==0.38.0",
  "SQLAlchemy==2.0.44",
  "alembic==1.17.1",
  "pydantic==2.12.4",
  "python-dotenv==1.2.1",
  "httpx==0.28.1",
  "stashapi==0.1.2",
  "PyYAML==6.0.3",
  "packaging==25.0"
]

[project.urls]
Homepage = "https://github.com/skier233/Stash-AIServer"

[project.scripts]
stash-ai-server = "stash_ai_server.entrypoint:main"
